fixes the api url 2nd time

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Foodsbay India | Food Products Manufacturer in India – Pickles, honey, Oils, Chaap & Seasonings</title>
     <meta name="description" content="Foodsbay India is a trusted food products manufacturer in India offering pickles, honey, chaap, Jam & chutney edible oils, spices, herbs, seasonings & bulk food supply for retail, HoReCa & distributors. Partner with us for quality wholesale solutions.">
     
+
     <!-- Primary Meta Tags -->
 <meta name="keywords" content="food manufacturer in India, spices manufacturer, seasoning manufacturer, edible oil manufacturer, bulk food supplier, HoReCa food products" />
 <meta name="robots" content="index, follow" />
@@ -93,6 +94,8 @@
             },
         }
     </script>
+
+    <meta name="google-site-verification" content="sdGUhlay_caJHuQW30YlVPBdKTtrLk4tQRu_X5v5y4g" />
 </head>
 <body class="font-sans text-gray-900 bg-cream overflow-x-hidden">
     
@@ -513,7 +516,7 @@
                     </div>
                     <div class="p-6">
                         <h3 class="font-serif text-xl sm:text-2xl font-bold text-gray-900 mb-3 mt-3">Pure Honey</h3>
-                        <p class="text-gray-600 mb-4 leading-relaxed">100% natural honey sourced from trusted beekeepers across India's diverse regions.</p>
+                        <p class="text-gray-600 mb-4 leading-relaxed">Naturally sourced honey from trusted beekeepers across India's diverse regions.</p>
                         <ul class="space-y-2 mb-6 text-sm text-gray-600">
                             <li class="flex items-center gap-2">
                                 <span class="text-primary">•</span> Multi-flora & Single-origin
@@ -546,6 +549,28 @@
                             </li>
                             <li class="flex items-center gap-2">
                                 <span class="text-primary">•</span> Bulk Packaging Available
+                            </li>
+                        </ul>
+                        <a href="#contact" class="inline-block text-primary font-medium hover:underline">Inquire Now →</a>
+                    </div>
+                </div>
+                <!-- Product Card 3 -->
+                <div class="group bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:-translate-y-2" data-aos="fade-up" data-aos-delay="300">
+                    <div class="h-48 sm:h-56 bg-gradient-to-br from-amber-50 to-amber-100 flex items-center justify-center text-7xl sm:text-8xl group-hover:scale-110 transition-transform duration-300">
+                        <img src="./assets/catalog_imgs/chaap.webp" alt="chaap">
+                    </div>
+                    <div class="p-6">
+                        <h3 class="font-serif text-xl sm:text-2xl font-bold text-gray-900 mb-3 mt-3">Protein-rich Chaap</h3>
+                        <p class="text-gray-600 mb-4 leading-relaxed">Delicious, protein-rich chaap crafted with traditional flavors and premium ingredients — perfect for retailers and restaurants.</p>
+                        <ul class="space-y-2 mb-6 text-sm text-gray-600">
+                            <li class="flex items-center gap-2">
+                                <span class="text-primary">•</span> Traditional & Fusion Flavours
+                            </li>
+                            <li class="flex items-center gap-2">
+                                <span class="text-primary">•</span> Standardized Quality Across Batches
+                            </li>
+                            <li class="flex items-center gap-2">
+                                <span class="text-primary">•</span> Restaurant-grade Texture & Yield Stability
                             </li>
                         </ul>
                         <a href="#contact" class="inline-block text-primary font-medium hover:underline">Inquire Now →</a>
